--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "expo-status-bar": "~3.0.8",
     "expo-web-browser": "~15.0.8",
     "lucide-react-native": "^0.548.0",
+    "prop-types": "^15.8.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
     "react-native-appwrite": "^0.17.1",
+    "react-native-picker-select": "^9.3.1",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
